# static-queue

./: .gitignore  CMakeList.txt  LICENSE  README.md
includes/: queue.h
sources/: queue.c
unit-tests/: CMakeLists.txt  Unit-tests  configuration.h  configuration.h.in  main-test.c  queue-test.c  tests.h
